# pyproject.toml
[project]
name = "mini_wrapper"
version = "1.0.0"
description = "mini wrapper for speedy dev"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]

requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "setproctitle>=1.3.6",
    "colorlog>=6.9.0",
]

readme = "README.md"
license = {text = "MIT"}

 

 

